[project]
name = "mcp-qiskit-code-assistant"
version = "0.0.2"
description = "MCP server for the Qiskit Code Assistant"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastmcp>=2.8.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]
[[project.authors]]
name = "Quantum+AI Team. IBM Quantum"
email = "Quantum.Plus.AI@ibm.com"

[project.license]
text = "Apache-2.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-qiskit-code-assistant = "mcp_qiskit_code_assistant:main"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "mypy>=1.15.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "respx>=0.20.0",
]
